Add Java module definitions (#1028)
Aims to solve #1012

I added Java module definitions where I thought appropriate. Several of
the subprojects aren't designed for external consumption, such as test
suites and benchmarks.

Packages named "internal" I treated as internal to chicory, i.e. not
intended for external consumption.

Additionally, I did my best to check when types from a dependency were
exposed in a module's public API, in order to use `requires transitive`
appropriately. It's possible I missed a spot, but this will never be
breaking and will result in at most a compiler warning (on chicory's
side) or the need to write another `requires` (on the library user's
side).

**Checkstyle**

Chicory was still using checkstyle 9.3, which is still the default
version in the maven-checkstyle-plugin. Because this old checkstyle
version was running into problems consuming `module-info.java`, I
increased the version to the latest.

This required checking for breaking changes in checkstyle, which I did
by looking at [every release since
9.3](https://checkstyle.org/releasenotes.html#Release_9.3). Checkstyle
does not follow SemVer so you have to look at every release notes.

**Terminology**

For people reading this PR, the PR itself targets the Java Modules
introduced in Java 9. They are a separate concept from WASM modules.

---------

Co-authored-by: andreatp <andrea.peruffo1982@gmail.com>